fix: make postcode optional for agency search