@@ -26,7 +26,6 @@ import java.time.ZoneOffset;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import lombok.NonNull;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -106,7 +105,7 @@ public class AgencyService {
 
   public List<FullAgencyResponseDTO> getAgencies(String postCode, int consultingTypeId,
       Optional<Integer> topicId) {
-    return getAgencies(postCode, consultingTypeId, topicId, Optional.empty(), Optional.empty(), Optional.empty());
+    return getAgencies(Optional.ofNullable(postCode), consultingTypeId, topicId, Optional.empty(), Optional.empty(), Optional.empty());
   }
 
   /**
@@ -117,16 +116,18 @@ public class AgencyService {
    * @param consultingTypeId the consulting type used for filtering agencies
    * @return a list containing regarding agencies
    */
-  public List<FullAgencyResponseDTO> getAgencies(String postCode, int consultingTypeId,
+  public List<FullAgencyResponseDTO> getAgencies(Optional<String> postCode,
+      Integer consultingTypeId,
       Optional<Integer> topicId,
       Optional<Integer> age, Optional<String> gender, Optional<String> counsellingRelation) {
 
     var consultingTypeSettings = retrieveConsultingTypeSettings(
         consultingTypeId);
-
-    if (doesPostCodeNotMatchMinSize(postCode, consultingTypeSettings)) {
+    if (postCode.isPresent() && doesPostCodeNotMatchMinSize(postCode.get(),
+        consultingTypeSettings)) {
       return Collections.emptyList();
     }
+
 
     var agencies = findAgencies(postCode, getConsultingTypeIdForSearch(consultingTypeId), topicId,
         age, gender, counsellingRelation);
@@ -148,7 +149,7 @@ public class AgencyService {
     return multitenancyWithSingleDomain ? Optional.empty() : Optional.of(consultingTypeId);
   }
 
-  private List<Agency> findAgencies(String postCode, Optional<Integer> consultingTypeId,
+  private List<Agency> findAgencies(Optional<String> postCode, Optional<Integer> consultingTypeId,
       Optional<Integer> optionalTopicId, Optional<Integer> age,
       Optional<String> gender, Optional<String> counsellingRelation) {
 
@@ -176,8 +177,8 @@ public class AgencyService {
   private List<Agency> findAgencies(AgencySearch agencySearch) {
     try {
       return getAgencyRepositoryForSearch()
-          .searchWithoutTopic(agencySearch.getPostCode(),
-              agencySearch.getPostCode().length(), agencySearch.getConsultingTypeId().orElse(null),
+          .searchWithoutTopic(agencySearch.getPostCode().orElse(null),
+              agencySearch.getPostCode().orElse("").length(), agencySearch.getConsultingTypeId().orElse(null),
               agencySearch.getAge().orElse(null),
               agencySearch.getGender().orElse(null),
               agencySearch.getCounsellingRelation().orElse(null),
@@ -239,7 +240,7 @@ public class AgencyService {
   private List<Agency> findAgenciesWithTopic(AgencySearch agencySearch) {
     try {
       return getAgencyRepositoryForSearch()
-          .searchWithTopic(agencySearch.getPostCode(), agencySearch.getPostCode().length(),
+          .searchWithTopic(agencySearch.getPostCode().orElse(null), agencySearch.getPostCode().orElse("").length(),
               agencySearch.getConsultingTypeId().orElse(null),
               agencySearch.getTopicId().orElseThrow(),
               agencySearch.getAge().orElse(null), agencySearch.getGender().orElse(null),
@@ -310,7 +311,7 @@ public class AgencyService {
         .tenantId(agency.getTenantId())
         .consultingType(agency.getConsultingTypeId())
         .agencySpecificPrivacy(renderedAgencySpecificPrivacy)
-        .topicIds(agency.getAgencyTopics().stream().map(AgencyTopic::getTopicId).collect(Collectors.toList()));
+        .topicIds(agency.getAgencyTopics().stream().map(AgencyTopic::getTopicId).toList());
   }
 
   protected String getRenderedAgencySpecificPrivacy(Agency agency) {
@@ -340,8 +341,7 @@ public class AgencyService {
         .external(agency.isExternal())
         .demographics(getDemographics(agency))
         .tenantId(agency.getTenantId())
-        .topicIds(agency.getAgencyTopics().stream().map(AgencyTopic::getTopicId).collect(
-            Collectors.toList()));
+        .topicIds(agency.getAgencyTopics().stream().map(AgencyTopic::getTopicId).toList());
 
   }
 
